<resources>
    <string name="app_name">Project Wireless Device</string>
    <string name="registration">Registration</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="facebook_app_id">376445869577428</string>
    <string name="fb_login_protocol_scheme">fb376445869577428</string>
    <string name="textSignup">Sign up</string>
    <string name="Login">Log in</string>
    <string name="hintUser">Email or Username</string>
    <string name="hintPass">Password</string>
    <string name="title">Welcome to CoClass!!"</string>
    <string name="noAcc">Don\'t have an account?</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user">Username</string>
    <string name="hint_email">Email address exmaple: a@b.c</string>
    <string name="hint_password">Password</string>
    <string name="hint_re_password">Re-Password</string>
    <string name="register">Register</string>
    <string name="title_activity_slidebar">SlidebarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="googleIdToken">672584759710-n3715i5jmhsca7mofkl24nej08jfnqhm.apps.googleusercontent.com</string>
</resources>
